Bug 127218 - Manage Changes Dialog Too Big (Wide), Cannot Be Resized To A Smaller Size
Summary: Manage Changes Dialog Too Big (Wide), Cannot Be Resized To A Smaller Size
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords:
Depends on:
Blocks: Track-Changes Macro-UI
  Show dependency treegraph
 
Reported: 2019-08-29 13:44 UTC by Eltomito
Modified: 2019-11-21 18:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
This is the minimum width of the Manage Changes window on an 1366px-wide screen. (167.81 KB, image/png)
2019-08-29 13:45 UTC, Eltomito
Details
I can't reproduce it (69.02 KB, image/png)
2019-09-26 07:12 UTC, Xisco Faulí
Details
After opening another Writer window and switching back and forth between the two, the Manage Changes window magically shrinks! (80.87 KB, image/png)
2019-09-26 07:45 UTC, Eltomito
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eltomito 2019-08-29 13:44:01 UTC
Description:
The Manage Changes dialog is ridiculously wide and cannot be resized to make it narrower. It just uselessly takes up screen space. Could you, please, make its minimum width smaller again? Perhaps even very small, such as 10px? What's the point of limiting its minimum width anyway?


Steps to Reproduce:
1. Open any document.
2. Open the Manage Changes dialog
3. See how ridiculously wide it is.

Actual Results:
It's way too wide and I can't make it any narrower!

Expected Results:
I should definitely be able to make it narrower than half of my 1366px display.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 6.3.0.4
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Eltomito 2019-08-29 13:45:02 UTC
Created attachment 153734 [details]
This is the minimum width of the Manage Changes window on an 1366px-wide screen.
Comment 2 Xisco Faulí 2019-09-23 14:41:38 UTC
@Caolán, do you think it makes sense to reduce the dialog a bit ?
Comment 3 Eltomito 2019-09-23 20:25:04 UTC
(In reply to Xisco Faulí from comment #2)
> @Caolán, do you think it makes sense to reduce the dialog a bit ?

Guys, why don't you let the users make it as narrow as they want? IMHO the minimum width should be set to something like 50 pixels, so that it can never be made completely disappear, because that would look confusing, but otherwise, what's the reason for putting a higher limit on its minimum width?
Comment 4 Xisco Faulí 2019-09-24 07:36:44 UTC
@Eltomito, the dialog can be resized and be narrower, that is not part of the discussion. The question is whether it should be narrower by default or not
Comment 5 Eltomito 2019-09-25 18:07:54 UTC
(In reply to Xisco Faulí from comment #4)
> @Eltomito, the dialog can be resized and be narrower, that is not part of
> the discussion. The question is whether it should be narrower by default or
> not

No, the actual problem I'm reporting is that the dialog cannot be resized to anything narrower than what you can see in the attached screenshot. Maybe this differs on different systems and backends but at least on my system (Ubuntu + gtk2 - see above), its minimum width is this wide.
Comment 6 Xisco Faulí 2019-09-26 07:12:33 UTC
Created attachment 154512 [details]
I can't reproduce it

How it looks for me in

Version: 6.4.0.0.alpha0+
Build ID: 186d36a7036462ae641b35004b4ffba3eeeca46f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 7 Xisco Faulí 2019-09-26 07:13:28 UTC
Hello Eltomito,
What happens if you execute 'SAL_USE_VCLPLUGIN=gen soffice' from command line? is the dialog smaller ?
Comment 8 Eltomito 2019-09-26 07:44:15 UTC
Hi! Thank you for spending your time on this!

No, the gen backend didn't help BUT I found out that when I open another Writer window via File->New Document, which opens with the Manage Changes subwindow automatically open, then just clicking back and forth between the two writer windows magically shrinks the Manage Changes Window to a nice smaller size and makes it freely resizable down to that new width. (See attachment.)

It works exactly the same way with the gtk2 backend ( SAL_USE_VCLPLUGIN=gtk libreoffice6.3 ) and the gen backend.

When I tried with the gtk3 backend, the resize problem didn't exist in the first place (yippeee!).

Maybe it has to do with the window manager (xfwm4) which is a part of Xubuntu which I'm using. Let's see if I can try with a different window manager...
Comment 9 Eltomito 2019-09-26 07:45:25 UTC
Created attachment 154516 [details]
After opening another Writer window and switching back and forth between the two, the Manage Changes window magically shrinks!
Comment 10 Caolán McNamara 2019-09-26 14:24:59 UTC
I think the initial size is the size considering the original text in the buttons of "Reject/Clear formatting" and "Reject All/Clear formatting" which are super long strings for buttons, the text gets changed later, but after the initial size is taken
Comment 11 Commit Notification 2019-09-26 18:53:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f35825e85f59e0fd155c68d63260169cd3cb38c9

Resolves: tdf#127218 allow changes dialog to shrink when button text changes

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2019-09-26 18:55:36 UTC
that seems to be the problem, fixed in master, backport to 6-3 in gerrit
Comment 13 Commit Notification 2019-09-27 09:10:14 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/a1e102bc4f0f36f19b76c34971470faa45e3aaf8

Resolves: tdf#127218 allow changes dialog to shrink when button text changes

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Eltomito 2019-09-27 10:18:58 UTC
I've just tried the daily build and it fixes the problem for me.
Great job! Thank you!
Comment 15 Xisco Faulí 2019-09-27 12:19:36 UTC
(In reply to Eltomito from comment #14)
> I've just tried the daily build and it fixes the problem for me.
> Great job! Thank you!

Setting to VERIFIED then. Thanks for reporting and checking the issue.
@Caolán, thank for fixing it!