Resolves: tdf#127218 allow changes dialog to shrink when button text changes

original the dialog has super wide button contents when the initial size
is calculated, and then the buttons are changed afterwards, but the dialog
remains at its initial size.

Change-Id: Ib29ab9ebdec01a93561a8b304572df60b6ad5ad2